# rust-web-programming-code

./: Cargo.toml  output.txt  readme.md  tasks.json
chapter1&chapter2/: main.rs  test_marco.rs  test_struct_state.rs  test_trait.rs
frontend/: esbuild.js  package-lock.json  package.json  serve.json  ts.config.json
frontend/public/: bundle.css.map  bundle.js  bundle.js.map  index.html
frontend/src/: App.css  index.tsx
frontend/src/api/: create.ts  delete.ts  get.ts  update.ts  url.ts  utils.ts
frontend/src/components/: CreateItemForm.tsx  ToDoItem.tsx
frontend/src/interfaces/: toDoItems.ts
ingress/: Cargo.toml  index.html  tasks.json
ingress/scripts/: run_server.sh
ingress/src/: main.rs
scripts/: basic_test.sh
test_async/: Cargo.toml
test_async/src/: lib.rs  main.rs
to_do/core/: Cargo.toml
to_do/core/src/: enums.rs  lib.rs  main.rs  structs.rs
to_do/core/src/api/basic_actions/: create.rs  delete.rs  get.rs  update.rs
to_do/dal/: Cargo.toml
to_do/dal/src/: json_file.rs
to_do/glue/: Cargo.toml
to_do/glue/src/: errors.rs  token.rs
to_do/networking/actix_server/: Cargo.toml
to_do/networking/actix_server/src/: main.rs
to_do/networking/actix_server/src/api/: mod.rs
to_do/networking/actix_server/src/api/basic_actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
