[package]
name = "to_do_core"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
to_do_dal = { path = "../dal" }
glue = { path = "../glue" }

[features]
json-file-storage = ["to_do_dal/json-file"]
default = ["json-file-storage"]
